--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'war'
 
 group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
@@ -27,8 +28,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('mysql:mysql-connector-java')
-	compileOnly('org.projectlombok:lombok')
+	compile('org.projectlombok:lombok')
+	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
+	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
