--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,7 @@
-buildscript {
-	ext {
-		springBootVersion = '2.0.5.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+plugins {
+	id 'org.springframework.boot' version '2.1.5.RELEASE'
+	id 'java'
 }
-
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
@@ -28,7 +20,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('mysql:mysql-connector-java')
-	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+	annotationProcessor ('org.projectlombok:lombok:1.18.8')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
