--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('mysql:mysql-connector-java')
+	//compile('mysql:mysql-connector-java')
+	compile('org.postgresql:postgresql')
 	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
 	annotationProcessor ('org.projectlombok:lombok:1.18.8')
 
