--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=mysql
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False
-spring.datasource.username=kodilla_user
-spring.datasource.password=kodilla_password
+spring.jpa.database=postgresql
+spring.datasource.url=$JDBC{JDBC_DATABASE_URL}
+spring.datasource.username=$JDBC{JDBC_DATABASE_USERNAME}
+spring.datasource.password=$JDBC{JDBC_DATABASE_PASSWORD}
 
+
+
+#spring.jpa.database=mysql
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False
+#spring.datasource.username=kodilla_user
+#spring.datasource.password=kodilla_password
