--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,13 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	//compile('mysql:mysql-connector-java')
-	compile('org.postgresql:postgresql')
-	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+	compile('org.projectlombok:lombok:1.18.8')
 	annotationProcessor ('org.projectlombok:lombok:1.18.8')
-
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-
-//	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+	compile('mysql:mysql-connector-java')
+	
+/*
+	compile('org.postgresql:postgresql')
+	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+*/
 }
