--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,11 @@ dependencies {
 	compile('org.projectlombok:lombok:1.18.8')
 	annotationProcessor ('org.projectlombok:lombok:1.18.8')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	//compile('mysql:mysql-connector-java')
+	compile('io.springfox:springfox-swagger2:2.7.0')
+	compile('io.springfox:springfox-swagger-ui:2.7.0')
+	compile('mysql:mysql-connector-java')
+	compile('org.springframework.boot:spring-boot-starter-mail:2.1.6.RELEASE')
 
-	compile('org.postgresql:postgresql')
+	//compile('org.postgresql:postgresql')
 	//providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
