--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 #spring.mail.username=${MAIL_USERNAME}
 #spring.mail.password=${MAIL_PASSWORD}
-spring.mail.username=mdziagaczgodilla@gmail.com
-spring.mail.password=dziagaczkodilla;
+spring.mail.username=mdziagaczkodilla@gmail.com
+spring.mail.password=dziagacz.kodilla9
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
