--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	compile('io.springfox:springfox-swagger-ui:2.7.0')
 	compile('mysql:mysql-connector-java')
 	compile('org.springframework.boot:spring-boot-starter-mail:2.1.6.RELEASE')
+	compile('com.google.code.gson:gson:2.8.2')
 
 	//compile('org.postgresql:postgresql')
 	//providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
