--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #ADMINISTRATION
 admin.mail=mdziagaczkodilla@gmail.com
 
+#ACTUATOR
+management.endpoints.web.exposure.include=*
+info.app.name=Task Manager
+info.app.despription=Application has been createt on Kodilla course
+info.app.vervion=1.0.0
+
