--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,14 @@ management.endpoints.web.exposure.include=*
 info.app.name=Task Manager
 info.app.despription=Application has been createt on Kodilla course
 info.app.vervion=1.0.0
+info.app.owner.name=John
+info.app.owner.surname=Doe
+info.app.administrator.email=john.doe@test.com
+info.app.administrator.adress.street=Super Cool Street
+info.app.administrator.adress.number=42
+info.company.name=TaskCrudAppCreator
+info.company.goal=Our goal is to make the world a better place!
+info.company.email=task@crud.com
+info.company.phone=744489230
+
 
