--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ admin.mail=mdziagaczkodilla@gmail.com
 #ACTUATOR
 management.endpoints.web.exposure.include=*
 info.app.name=Task Manager
-info.app.despription=Application has been createt on Kodilla course
+info.app.despription=Application has been created on Kodilla course
 info.app.vervion=1.0.0
 info.app.owner.name=John
 info.app.owner.surname=Doe
